docker/envoy.yml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 6100
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: auto
                stat_prefix: version_history_api
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: version-history-api
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}
    - address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 2000
      filter_chains:
        - filters:
            - name: envoy.filters.network.tcp_proxy
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.tcp_proxy.v3.TcpProxy
                stat_prefix: mongo_service
                cluster: mongo-service
                idle_timeout: 300s
  clusters:
    - name: version-history-api
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: random
      http2_protocol_options: {}
      health_checks:
        - interval: 5s
          interval_jitter: 1s
          no_traffic_interval: 5s
          timeout: 2s
          unhealthy_threshold: 1
          healthy_threshold: 3
          http_health_check:
            path: /
            codec_client_type: HTTP2
          always_log_health_check_failures: true
      load_assignment:
        cluster_name: version-history-api
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: version-history-api
                      port_value: 6100
    - name: mongo-service
      connect_timeout: 0.25s
      type: strict_dns
      lb_policy: random
      load_assignment:
        cluster_name: mongo-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: mongo-service
                      port_value: 2000
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 6200
